TFP-6598 bruk vedtaksdagsats fra Inntektsgrunnlag